[package]
name = "my-rusty-minesweeper"
version = "0.1.0"
edition = "2021"

# Made by following a tutorial avaliable online @ https://dev.to/qongzi/bevy-minesweeper-introduction-4l7f

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.0"
